WIP: add archive thread viewer
